# aifoundations

hw1/class_crew/: README.md  pyproject.toml
hw1/class_crew/generated_courses/quantum_error_correction/assessment/: final_project_grading.md
hw1/class_crew/generated_courses/quantum_error_correction/assignments/: business_assignments.md  technical_assignments.md
hw1/class_crew/generated_courses/quantum_error_correction/curriculum/: course_syllabus.md
hw1/class_crew/generated_courses/quantum_error_correction/feedback/: business_student_simulation.md  technical_student_simulation.md
hw1/class_crew/generated_courses/quantum_error_correction/lectures/: business_guest_lecture.md  technical_guest_lecture.md
hw1/class_crew/generated_courses/quantum_error_correction/projects/: business_use_case.md  technical_solution.md
hw1/class_crew/generated_courses/quantum_error_correction/research/: business_research_report.md  technical_research_report.md
hw1/class_crew/generated_courses/quantum_error_correction/review/: course_review_report.md
hw1/class_crew/src/class_crew/: crew.py  main.py
hw1/class_crew/src/class_crew/config/: agents.yaml  tasks.yaml
hw1/provided-example/: ai_studio_article.md  main.py  requirements.txt  sandbox.ipynb
hw2/: README.md
hw2/conversation_logs/: conversation_first_conversation.jsonl
hw4/: README.md  env_example.txt  gradio_voice_app.py  kill_voice_ai.sh  requirements.txt  setup.py  speech_tts_demo.ipynb  test_audio_processing.py  voice_ai_app.py  writeup.md
